chore: update version regexp to match github marketplace syntax

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,4 +11,5 @@ jobs:
       - run: yarn install
       - uses: ./
         with:
+          version-regexp: 'v\d'
           repo-token: ${{ secrets.GITHUB_TOKEN }}
