--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,12 +4,12 @@ on:
     types: [published]
 
 jobs:
-  ci:
+  publish:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - run: yarn install
       - uses: ./
         with:
-          version-regexp: 'v\d'
+          version-regexp: '\d'
           repo-token: ${{ secrets.GITHUB_TOKEN }}
