feat: update funding links

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,3 @@
 # These are supported funding model platforms
 
-github: [papeloto]
-liberapay: papeloto
-custom: ["https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=HAX7Z7P48JYCJ&source=url"]
+github: [pocket-studios]
