--- a/package.json
+++ b/package.json
@@ -32,11 +32,10 @@
   "devDependencies": {
     "@pocket-studios/eslint-config": "1.0.4",
     "@types/node": "14.11.2",
-    "@vercel/ncc": "0.24.1",
-    "eslint": "6.8.0",
-    "typescript": "4.0.2",
     "@typescript-eslint/eslint-plugin": "4.1.0",
     "@typescript-eslint/parser": "4.1.0",
+    "@vercel/ncc": "0.24.1",
+    "eslint": "6.8.0",
     "eslint-config-airbnb": "18.2.0",
     "eslint-plugin-cypress": "2.11.2",
     "eslint-plugin-import": "2.22.0",
@@ -44,9 +43,11 @@
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-react": "7.21.3",
     "eslint-plugin-react-hooks": "4.1.2",
+    "eslint-plugin-replace-relative-imports": "^1.0.0",
     "eslint-plugin-unused-imports": "0.1.3",
     "husky": "4.2.5",
-    "lint-staged": "10.2.13"
+    "lint-staged": "10.2.13",
+    "typescript": "4.0.2"
   },
   "eslintConfig": {
     "extends": [
