chore: rename org

--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 name: Update Files Version Field
 description: Update your files version field on new releases
-author: Pocket Studios
+author: Pocket Apps
 branding:
   color: blue
   icon: arrow-up-circle
